:sparkles: Improve structure and add new feature

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       </div>
     </div>
 
+    <div class="table-header" style="display: flex; justify-content: space-between; align-items: center; margin-top: 2rem; margin-bottom: 0.5rem;">
+      <h2 style="margin: 0;">今日紀錄</h2>
+      <button id="viewAllBtn" class="btn-secondary">查看全部紀錄 👉</button>
+    </div>
+
     <table>
       <thead>
         <tr>
@@ -78,6 +83,6 @@
         allowfullscreen
       ></iframe>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
