:art: format of the code

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Focus Clock</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Focus Clock</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
     <h1 style="margin-bottom: 1rem; overflow: hidden">
       <img
@@ -36,8 +39,17 @@
       </div>
     </div>
 
-    <div class="table-header" style="display: flex; justify-content: space-between; align-items: center; margin-top: 2rem; margin-bottom: 0.5rem;">
-      <h2 style="margin: 0;">今日紀錄</h2>
+    <div
+      class="table-header"
+      style="
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 2rem;
+        margin-bottom: 0.5rem;
+      "
+    >
+      <h2 style="margin: 0">今日紀錄</h2>
       <button id="viewAllBtn" class="btn-secondary">查看全部紀錄 👉</button>
     </div>
 
